@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0

class Book {
    - isbn,
    - title,
    - genre,
    - authors,
    - description
    Book(isbn, title, genre, authors, description=None)
}

class BookController
{
    + getBooksByGenre(genre)
}
class BookServiceImpl
{
    + getBooksByGenre(genre)
}

class BookRepository
{
    + findAll()
}


BookController ..> BookServiceImpl
BookServiceImpl ..> BookRepository
BookController ..> Book
BookServiceImpl ..> Book
BookRepository "1" --> "1..*" Book: searches

@enduml
